<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">NhomVenom</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_manager">Quản Lý Sách </string>
    <string name="menu_type">Quản Lý Thể Loại Sách</string>
    <string name="menu_manager_member">Quản Lý Nhân Viên</string>
    <string name="menu_member">Quản Lý Thành Viên</string>
    <string name="menu_ticket">Quản Lý Phiếu Mượn</string>
    <string name="menu_statistical">Thống Kê</string>
    <string name="menu_change_pass">Đổi Mật Khẩu</string>
    <string name="menu_logout">Đăng Xuất</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>