<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_manager">

    <fragment
        android:id="@+id/nav_manager"
        android:name="com.example.bon.nhomvenom.ui.home.HomeFragment"
        android:label="@string/menu_manager"
        tools:layout="@layout/fragment_manager" />

    <fragment
        android:id="@+id/nav_type"
        android:name="com.example.bon.nhomvenom.ui.gallery.GalleryFragment"
        android:label="@string/menu_type"
        tools:layout="@layout/fragment_type" />

    <fragment
        android:id="@+id/nav_member"
        android:name="com.example.bon.nhomvenom.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_member"
        tools:layout="@layout/fragment_member" />


    <fragment
        android:id="@+id/nav_ticket"
        android:name="com.example.bon.nhomvenom.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_member"
        tools:layout="@layout/fragment_ticket" />

    <fragment
        android:id="@+id/nav_statistical"
        android:name="com.example.bon.nhomvenom.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_statistical"
        tools:layout="@layout/fragment_ticket" />

    <fragment
        android:id="@+id/nav_manager_member"
        android:name="com.example.bon.nhomvenom.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_manager_member"
        tools:layout="@layout/fragment_addmember" />


</navigation>